--- a/emoncms/alpine/Dockerfile
+++ b/emoncms/alpine/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.16
 
-ARG TARGETPLATFORM=linux/amd64
+ARG TARGETPLATFORM
 ARG S6_OVERLAY_VERSION=3.1.5.0
 ARG S6_SRC=https://github.com/just-containers/s6-overlay/releases/download
 ARG S6_DIR=/etc/s6-overlay/s6-rc.d
@@ -20,7 +20,7 @@ ENV EMONCMS_DIR=/opt/emoncms
 ENV EMONCMS_LOG_LOCATION=/var/log/emoncms
 
 ARG PRIMOS="apache2 redis mariadb mosquitto"
-ARG SECONDOS="emoncms_mqtt"
+ARG SECONDOS="emoncms_mqtt service-runner feedwriter"
 ARG TS="phpfina phpfiwa phptimeseries"
 ARG HTTP_CONF=/etc/apache2/httpd.conf
 ARG MQTT_CONF=/etc/mosquitto/mosquitto.conf
@@ -59,7 +59,7 @@ RUN mysql_install_db --user=mysql --ldata=/var/lib/mysql;\
 # it is possible to install s6-overlay with apk but it does not provide user2
 #RUN apk add --no-cache s6-overlay
 # if using the s6-overlays tarballs & execlineb is missing : apk add --no-cache execline
-RUN set -eux;\
+RUN set -x;\
 	case $TARGETPLATFORM in \
 		"linux/amd64")  S6_ARCH="x86_64"  ;; \
 		"linux/arm/v7") S6_ARCH="arm"  ;; \
@@ -89,20 +89,24 @@ RUN set -x;\
 # no sudo group on alpine, using the wheel group instead
 # httpd user is apache and not www-data
 RUN set -x;\ 
-	addgroup $CONTAINER_USER;\
-	adduser -S $CONTAINER_USER -G wheel dialout -u 1001;\
+	#addgroup $CONTAINER_USER;\
+	#adduser -S $CONTAINER_USER -G wheel -u 1001;\
+	#addgroup $CONTAINER_USER dialout;\
 	mkdir -p $OEM_DIR;\
 	mkdir -p $EMONCMS_LOG_LOCATION;\
 	mkdir -p $EMONCMS_DIR;\
+	mkdir -p $EMONCMS_DATADIR;\
+	chown apache $EMONCMS_DATADIR;\
 	for i in $TS; do mkdir -p $EMONCMS_DATADIR/$i; done;\
-	for i in $TS; do chown apache:root $EMONCMS_DATADIR/$i; done;\
-        chown $CONTAINER_USER:$CONTAINER_USER $OEM_DIR;\
-	chown $CONTAINER_USER $WWW;\	
-	chown $CONTAINER_USER $EMONCMS_LOG_LOCATION;\
+	for i in $TS; do chown apache $EMONCMS_DATADIR/$i; done;\
+	#chown $CONTAINER_USER:$CONTAINER_USER $OEM_DIR;\
+	#chown $CONTAINER_USER $WWW;\	
+	chown apache $EMONCMS_LOG_LOCATION;\
 	touch $EMONCMS_LOG_LOCATION/emoncms.log;\
 	chmod 666 $EMONCMS_LOG_LOCATION/emoncms.log;\
-	chown $CONTAINER_USER $EMONCMS_DIR;\
+	#chown $CONTAINER_USER $EMONCMS_DIR;\
 	cd $WWW && git clone -b stable https://github.com/emoncms/emoncms.git;\
+	rm -Rf $WWW/emoncms/docs;\
 	cd $OEM_DIR;\
 	echo "emoncms_dir = '$EMONCMS_DIR'" > settings.ini;\
 	echo "openenergymonitor_dir = '$OEM_DIR'" >> settings.ini;\
@@ -152,7 +156,8 @@ RUN set -x;\
 # openrc is the apk package to use rc-service
 # to remove openrc : apk del --no-cache openrc
 # and rm -Rf /run/openrc
-RUN apk add --no-cache openrc;\
+RUN set -x;\
+	apk add --no-cache openrc;\
 	rc-update add mariadb;\
 	mkdir -p /run/openrc; \
 	touch /run/openrc/softlevel; \
@@ -164,11 +169,31 @@ RUN apk add --no-cache openrc;\
 	mysql -e "CREATE DATABASE $MYSQL_DATABASE DEFAULT CHARACTER SET utf8;";\
 	mysql -e "CREATE USER '$MYSQL_USER'@'localhost' IDENTIFIED BY '$MYSQL_PASSWORD';";\
 	mysql -e "GRANT ALL ON $MYSQL_DATABASE.* TO '$MYSQL_USER'@'localhost'; flush privileges;";\
+	# for backup module quiet install
+	cd $OEM_DIR;\
+	git clone https://github.com/openenergymonitor/EmonScripts;\
+	cp EmonScripts/install/emonsd.config.ini EmonScripts/install/config.ini;\
+	#for sync to run...
+	#sudo_file=/etc/sudoers.d/$CONTAINER_USER;\
+	#echo $CONTAINER_USER' ALL=(ALL) NOPASSWD: ALL' | tee $sudo_file;\
+	#chmod 0440 $sudo_file;\
+	wget https://raw.githubusercontent.com/Open-Building-Management/containers/main/makefile --no-check-certificate;\
+	make module name=graph;\
+	make module name=dashboard;\
+	make symodule name=sync;\
+	make symodule name=postprocess;\
+	make symodule name=backup;\
+	PHP_VER=$(php -v | head -n 1 | cut -d " " -f 2 | cut -f1 -d".");\
+	echo "post_max_size=3G" > /etc/php$PHP_VER/conf.d/backup.ini;\
+	echo "upload_max_filesize=3G" >> /etc/php$PHP_VER/conf.d/backup.ini;\
+	echo "upload_tmp_dir=$EMONCMS_DATADIR/backup/uploads" >> /etc/php$PHP_VER/conf.d/backup.ini;\
+	sed -i 's/sudo //' $EMONCMS_DIR/modules/sync/emoncms-sync.sh;\
 	apk del --no-cache openrc;\
 	rm -Rf /run/openrc
 
 # redis conf : simple
-RUN sed -i "s/^save 900 1/#save 900 1/" $REDIS_CONF;\
+RUN set -x;\
+	sed -i "s/^save 900 1/#save 900 1/" $REDIS_CONF;\
 	sed -i "s/^save 300 1/#save 300 1/" $REDIS_CONF;\
 	sed -i "s/^save 60 1/#save 60 1/" $REDIS_CONF;\
 	PHP_VER=$(php -v | head -n 1 | cut -d " " -f 2 | cut -f1 -d".");\
@@ -179,7 +204,8 @@ RUN sed -i "s/^save 900 1/#save 900 1/" $REDIS_CONF;\
 	pip3 install redis
 
 # mosquitto conf : fine
-RUN echo "persistence false" >> $MQTT_CONF;\
+RUN set -x;\
+	echo "persistence false" >> $MQTT_CONF;\
 	echo "allow_anonymous false" >> $MQTT_CONF;\
 	echo "listener 1883" >> $MQTT_CONF;\
 	echo "password_file /etc/mosquitto/passwd" >> $MQTT_CONF;\
@@ -193,20 +219,21 @@ RUN echo "persistence false" >> $MQTT_CONF;\
 	printf "extension=mosquitto.so" | tee /etc/php$PHP_VER/conf.d/mosquitto.ini 1>&2
 
 RUN set -x;\
-	#mkdir -p $S6_DIR/user2;\
-	#mkdir -p $S6_DIR/user2/contents.d;\
-	#touch $S6_DIR/user2/type;\
-	#echo "bundle" > $S6_DIR/user2/type;\
-	# needed for emoncms_mqtt to start ?
-	chown $CONTAINER_USER:wheel /var/lock;\
+	# needed for emoncms_mqtt and feedwriter to start ?
+	chown apache /var/lock;\
+	chown apache /tmp;\
 	for i in $SECONDOS; do mkdir $S6_DIR/$i; done;\
 	for i in $SECONDOS; do mkdir $S6_DIR/$i/dependencies.d; done;\
 	for i in $SECONDOS; do touch $S6_DIR/$i/dependencies.d/legacy-services; done;\
 	for i in $SECONDOS; do touch $S6_DIR/user2/contents.d/$i; done;\
 	for i in $SECONDOS; do echo "longrun" > $S6_DIR/$i/type; done;\
 	for i in $SECONDOS; do echo "#!/command/execlineb -P" > $S6_DIR/$i/run; done;\
-	echo "s6-setuidgid $CONTAINER_USER" >> $S6_DIR/emoncms_mqtt/run;\
-	echo "php $WWW/emoncms/scripts/services/emoncms_mqtt/emoncms_mqtt.php" >> $S6_DIR/emoncms_mqtt/run
+	echo "s6-setuidgid apache" >> $S6_DIR/emoncms_mqtt/run;\
+	echo "php $WWW/emoncms/scripts/services/emoncms_mqtt/emoncms_mqtt.php" >> $S6_DIR/emoncms_mqtt/run;\
+	echo "s6-setuidgid apache" >> $S6_DIR/service-runner/run;\
+	echo "python3 $WWW/emoncms/scripts/services/service-runner/service-runner.py" >> $S6_DIR/service-runner/run;\
+	echo "s6-setuidgid apache" >> $S6_DIR/feedwriter/run;\
+	echo "php $WWW/emoncms/scripts/feedwriter.php" >> $S6_DIR/feedwriter/run
 
 EXPOSE 80
 EXPOSE 1883
