--- a/.github/workflows/publish_lamp.yml
+++ b/.github/workflows/publish_lamp.yml
@@ -26,7 +26,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: ubuntu/lamp/.
+          context: lamp/ubuntu/.
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
           tags: alexjunk/lamp:latest
